--- a/ID_Templates/Vertical CR80/Card/styles.scss
+++ b/ID_Templates/Vertical CR80/Card/styles.scss
@@ -22,7 +22,7 @@ $id-height: 3.375in;
     width: $id-width;
     height: $id-height;
     display: grid;
-    background-color: white;
+    background-color: #f0f0f0;
     
     @media only screen {
         border-radius: 9px;
